-Moved about.css to about folder -Fixed CSS styling button spacing. For some reason some CSS elements are not carrying over.

--- a/html/src/app.css
+++ b/html/src/app.css
@@ -64,6 +64,7 @@ form {
 form button {
     margin-top: 5px;
     box-shadow: -3px 3px rgb(189, 189, 189);
+    margin-inline: 3px;
 }
 
 /* FOOTER/MEDIA FOR ALL PAGES */
